fix: change pull parameter from yes to always in docker_compose_v2
- docker_compose_v2 module requires string values: always, missing, never, policy
- Changed from boolean yes to string 'always'

--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -75,7 +75,7 @@
         project_src: "{{ app_dir }}"
         files:
           - "{{ docker_compose_file }}"
-        pull: yes
+        pull: always
         env_file: "{{ app_dir }}/.env.production"
       environment:
         COMPOSE_PROJECT_NAME: momo-splitwise
