Fix TypeScript errors: Add vite-env types, update Node to 20, fix type assertions

--- a/momo_splitwise/tsconfig.json
+++ b/momo_splitwise/tsconfig.json
@@ -17,5 +17,6 @@
     "noFallthroughCasesInSwitch": true,
     "verbatimModuleSyntax": false
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
