Fix Jinja2 template error in docker ps command

--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -127,7 +127,7 @@
       changed_when: false
 
     - name: Check container status immediately
-      shell: docker ps --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
+      shell: docker ps
       register: container_status
       changed_when: false
 
