--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -119,9 +119,16 @@
       environment:
         COMPOSE_PROJECT_NAME: momo-splitwise
 
-    - name: Wait for MongoDB to be ready
+    - name: Wait for MongoDB to be ready (skip if using MongoDB Atlas)
       shell: |
-        timeout 120 bash -c 'until docker exec momo-mongo mongosh --quiet --eval "db.runCommand({ ping: 1 })" > /dev/null 2>&1; do sleep 2; done'
+        # Check if using MongoDB Atlas (mongodb+srv) or local MongoDB
+        MONGODB_URI="{{ mongodb_uri | default('mongodb+srv://vephladamilare:Password123@cluster0.ywhkng4.mongodb.net/Momo-split?retryWrites=true&w=majority&appName=Cluster0') }}"
+        if echo "$MONGODB_URI" | grep -q "mongodb+srv"; then
+          echo "Using MongoDB Atlas, skipping local MongoDB wait"
+        else
+          echo "Using local MongoDB, waiting for it to be ready..."
+          timeout 120 bash -c 'until docker exec momo-mongo mongosh --quiet --eval "db.runCommand({ ping: 1 })" > /dev/null 2>&1; do sleep 2; done'
+        fi
       ignore_errors: yes
       register: mongo_wait
       changed_when: false
